Fully working default-api-test.dart and updated enums to match names in js/ts SDK

--- a/openapi/config.yaml
+++ b/openapi/config.yaml
@@ -2,3 +2,4 @@ pubDescription: Squid Router OpenAPI API client
 pubHomepage: http://github.com/GeniusVentures/squidrouter-client-dart
 pubLibrary: squidrouter
 pubname: squidrouter
+useEnumExtension: true
